--- a/src/templates/base.html
+++ b/src/templates/base.html
@@ -45,16 +45,16 @@
 
 <body>
     <!-- I) Navigation Bar (Header Panel) -->
-    {% include 'dash_navbar.html' %}
+    {% include 'navbar.html' %}
 
     <!-- II) Main Panel -->
     <main>
-        <div class="container">{% block content %} {% endblock %}</div>
+        <div class="container margin">{% block content %} {% endblock %}</div>
     </main>
 
     <!-- III) Footer panel -->
-    <footer class="page-footer text-center text-white p-1 fixed-bottom bg-primary">
+    <footer class="page-footer text-center p-1 fixed-bottom" style="background-color: #e3f2fd; color: rgba(65, 68, 65, 0.981);">
         <small>© ELI ELECTRICAL</small>
     </footer>
-  </body>
+</body>
 </html>
