--- a/src/templates/register.html
+++ b/src/templates/register.html
@@ -5,7 +5,6 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-GLhlTQ8iRABdZLl6O3oVMWSktQOp6b7In1Zl3/Jr59b6EGGoI1aFkw7cmDA6j6gD" crossorigin="anonymous">
-    <!-- <link rel="stylesheet" href="{{ url_for('static',filename='css/style.css') }}"/> -->
     <title>Register</title>
 
 </head>
@@ -38,7 +37,7 @@
                         </div>
                     </div>
                     <div class="row mb-2">
-                        <label for="company" class="col-sm-4 col-form-label"><strong>Empresa:</strong></label>
+                        <label for="company" class="col-sm-4 col-form-label"><strong>Institucion:</strong></label>
                         <div class="col-sm-8">
                             <input type="text" class="form-control" name="company">
                         </div>
