--- a/src/templates/base.html
+++ b/src/templates/base.html
@@ -38,6 +38,9 @@
         integrity="sha384-w76AqPfDkMBDXo30jS1Sgez6pr3x5MlQ1ZAGC+nuZB+EYdgRZgiwxhTBTkF7CXvN"
         crossorigin="anonymous"
     ></script>
+
+    <!-- Bootstrap JQUERY CDN (remote) -->
+    <script defer src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
     {% endblock %}
 
     <title>{% block title %}{% endblock %}</title>
