--- a/src/templates/login.html
+++ b/src/templates/login.html
@@ -7,10 +7,10 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-GLhlTQ8iRABdZLl6O3oVMWSktQOp6b7In1Zl3/Jr59b6EGGoI1aFkw7cmDA6j6gD" crossorigin="anonymous">
     <title>Login</title>
 </head>
-<body style="background-color:azure ">
+<body>
     <div class="container d-flex justify-content-center">
         <div class="card m-5 col-lg-6">
-            <div class="card-header text-white bg-primary"><h4>Login</h4></div>
+            <div class="card-header" style="background-color: #e3f2fd; color: rgba(65, 68, 65, 0.981);"><h4>Login</h4></div>
             <div class="card-body">
                 <form action="/login" method="POST">
                     {% with messages = get_flashed_messages(category_filter=['login']) %}
@@ -41,7 +41,7 @@
         </div>
     </div>
     <!-- III) Footer panel -->
-    <footer class="page-footer text-center text-white p-1 fixed-bottom bg-primary">
+    <footer class="page-footer text-center p-1 fixed-bottom" style="background-color: #e3f2fd; color: rgba(65, 68, 65, 0.981);">
         <small>© ELI ELECTRICAL</small>
     </footer>
 </body>
