--- a/src/templates/navbar.html
+++ b/src/templates/navbar.html
@@ -1,6 +1,6 @@
 <nav class="navbar fixed-top" style="background-color: #e3f2fd;">
     <div class="container-fluid">
-        <a class="navbar-brand" style=" color: rgba(65, 68, 65, 0.981);" href="#">Bienvenido</a>
+        <a class="navbar-brand" style=" color: rgba(65, 68, 65, 0.981);">Bienvenido {{ user.first_name }}</a>
         <button class="navbar-toggler" type="button" data-bs-toggle="offcanvas" data-bs-target="#offcanvasNavbar" aria-controls="offcanvasNavbar" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
         </button>
@@ -50,6 +50,7 @@
                     <input class="form-control me-2" type="search" placeholder="Search" aria-label="Search">
                     <button class="btn btn-outline-success" type="submit">Search</button>
                 </form>
+                <a href="/logout" onclick="confirmar(event)" class="btn btn-secondary mt-3 ms-auto">Salir</a>
             </div>
         </div>
     </div>
